syntax = "proto3";

//option csharp_namespace = "Server\Services";

service UserService{
	rpc AddUser (UserProto) returns (Response){};
	rpc DeleteUser (UserName) returns (Response){};
	rpc UpdateUser (UserUpdate) returns (Response){};
	rpc AddGame (GameProto) returns (Response){};
	rpc DeleteGame (GameName) returns (Response){};
	rpc UpdateGame (GameUpdate) returns (Response){};
}

message UserProto{
	
}

message UserName{
	int32 name = 1;
}


message UserUpdate{
	int32 name = 1;
	string nickname = 2;
}

message Response{
	bool result = 1;
}




message GameProto{
	string title = 1;
	string genre = 2;
}

message GameName{
	string name = 1;
}


message GameUpdate{
	string title = 1;
	string newName = 2;
	string newGenre = 3;
}
